apps/risks/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: risks
  namespace: risks
spec:
  replicas: 1
  selector:
    matchLabels:
      app: risks
  template:
    metadata:
      labels:
        app: risks
    spec:
      containers:
      - name: nginx
        image: ghcr.io/naestia/risks:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
