apps/risks/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: risks
  namespace: risks
spec:
  selector:
    app: risks
  ports:
  - port: 80
    targetPort: 80
