apps/risks/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: risks
  namespace: risks
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: risks.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: risks
            port:
              number: 80
